# Operating-Systems-labs-2023

./: build.sh  lab1.cpp  readme.md
lab1/: build.sh  config.txt  daemon.cpp  daemon.h  main.cpp
lab2/: CMakeLists.txt  build.sh  readme.md
lab2/client/: client.cpp  client.h
lab2/conn/: conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
lab2/host/: host.cpp  host_impl.cpp  host_impl.h
lab2/interface/: conn.h  message.h
lab3/: README.md  makefile
lab3/headers/: fine_grained_sync_set.h  fine_grained_sync_set.hpp  lazy_sync_set.h  lazy_sync_set.hpp  set.h
lab3/src/: main.cpp  test.cpp  test.h
